--- a/samconfig.toml
+++ b/samconfig.toml
@@ -4,7 +4,7 @@ version = 0.1
 
 [default]
 [default.global.parameters]
-stack_name = "lambda_sqs"
+stack_name = "lambda-sqs"
 
 [default.build.parameters]
 cached = true
@@ -14,9 +14,11 @@ parallel = true
 lint = true
 
 [default.deploy.parameters]
+s3_bucket = "lambda-sqs-deployment-bucket"
+region = "eu-west-1"
 capabilities = "CAPABILITY_IAM"
 confirm_changeset = true
-resolve_s3 = true
+resolve_s3 = false
 
 [default.package.parameters]
 resolve_s3 = true
